# bevy_project

./: Cargo.toml  README.md
assets/models/: Logo_IPFS.gltf  Logo_SugarFunge.gltf
src/: asset.rs  assets.rs  button.rs  camara.rs  cars.rs  constants.rs  font.rs  main.rs  mouse.rs  picking.rs  resources.rs  rotation.rs  text.rs  ui.rs  window.rs
src/components/: assets.rs  button.rs  camara.rs  cars.rs  mod.rs  text.rs  window.rs
src/tools/: constants.rs  generics.rs  mod.rs  resources.rs
src/views/: game.rs  menu.rs  mod.rs  splash.rs
