[package]
name = "bevy_project"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3


[dependencies]
bevy = {version = "0.8.1", features = ["dynamic"]}
bevy_egui = "0.16.0"
bevy-inspector-egui = "0.12.1"
bevy_editor_pls = {git = "https://github.com/jakobhellermann/bevy_editor_pls"}
bevy_flycam = "0.8.1"
bevy_text_mesh = "0.3.0"
bevy_mod_picking = "0.9.0"